{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 104,
  "lineage": "eb23c732-4955-0390-456b-bdc9e0cd2181",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca9689495e54fe32",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:elastic-ip/eipalloc-0ca9689495e54fe32",
            "domain": "vpc",
            "id": "eipalloc-0ca9689495e54fe32",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-43-201-186-150.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.186.150",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0646f33511924e736",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:instance/i-04e6485ac559126f4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04e6485ac559126f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0857f3b73a83f7308"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0857f3b73a83f7308",
            "private_dns": "ip-10-60-0-100.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.0.100",
            "public_dns": "ec2-43-201-186-150.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.186.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d8076ddddedfd200",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-072351d2dce524e93",
            "tags": {
              "Name": "IDC-CGW"
            },
            "tags_all": {
              "Name": "IDC-CGW"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-023c753eb066954e0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_eip.vpc_eip1",
            "aws_eip_association.eip_assoc1",
            "aws_key_pair.key",
            "aws_network_interface.instance1_eni_eth0",
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0646f33511924e736",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:instance/i-0cc85b290a02a41f9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc85b290a02a41f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a18e3ed06ff30060",
            "private_dns": "ip-10-60-1-100.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.1.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a719c6bc32560a32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2dbd8b02382008f",
            "tags": {
              "Name": "IDC-EC2"
            },
            "tags_all": {
              "Name": "IDC-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e36ac51ebb70fb88"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.sg2",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0646f33511924e736",
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:instance/i-05709cb7dec461ab5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05709cb7dec461ab5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b389ab49828dd265",
            "private_dns": "ip-10-50-1-100.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.50.1.100",
            "public_dns": "ec2-43-203-205-132.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.205.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078c8a5e0297e8d39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-005d77348b9f01670",
            "tags": {
              "Name": "AWS-EC2"
            },
            "tags_all": {
              "Name": "AWS-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d48fc4e75c29066"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.sg3",
            "aws_subnet.vpcaws_subnet",
            "aws_vpc.vpc2",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.latest_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:internet-gateway/igw-0c349b645c6b13b96",
            "id": "igw-0c349b645c6b13b96",
            "owner_id": "398561966751",
            "tags": {
              "Name": "IDC-IGW1"
            },
            "tags_all": {
              "Name": "IDC-IGW1"
            },
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:internet-gateway/igw-00e7e0404b326b2bf",
            "id": "igw-00e7e0404b326b2bf",
            "owner_id": "398561966751",
            "tags": {
              "Name": "AWS-IGW2"
            },
            "tags_all": {
              "Name": "AWS-IGW2"
            },
            "vpc_id": "vpc-02570dd4c7b80e4ec"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "instance1_eni_eth0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:network-interface/eni-0857f3b73a83f7308",
            "id": "eni-0857f3b73a83f7308",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:bc:e1:7c:11:17",
            "owner_id": "398561966751",
            "private_dns_name": "ip-10-60-0-100.ap-northeast-2.compute.internal",
            "private_ip": "10.60.0.100",
            "private_ip_list": [
              "10.60.0.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.60.0.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-023c753eb066954e0"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-072351d2dce524e93",
            "tags": {
              "Name": "IDC-CGW eth0"
            },
            "tags_all": {
              "Name": "IDC-CGW eth0"
            }
          },
          "dependencies": [
            "aws_security_group.sg1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c349b645c6b13b96",
            "id": "r-rtb-00d2c4a4c7cc6d8a91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00d2c4a4c7cc6d8a9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw1",
            "aws_route_table.rt1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpcaws_internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00e7e0404b326b2bf",
            "id": "r-rtb-0587bd9558c66a0761080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0587bd9558c66a076",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw2",
            "aws_route_table.vpcaws_subnet_route_table",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-00d2c4a4c7cc6d8a9",
            "id": "rtb-00d2c4a4c7cc6d8a9",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IDC-PublicRT1"
            },
            "tags_all": {
              "Name": "IDC-PublicRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-07d78395835a62709",
            "id": "rtb-07d78395835a62709",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "IDC-PrivateRT1"
            },
            "tags_all": {
              "Name": "IDC-PrivateRT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpcaws_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:route-table/rtb-0587bd9558c66a076",
            "id": "rtb-0587bd9558c66a076",
            "owner_id": "398561966751",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "AWS-PublicRT"
            },
            "tags_all": {
              "Name": "AWS-PublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02570dd4c7b80e4ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca7d57154544942",
            "route_table_id": "rtb-00d2c4a4c7cc6d8a9",
            "subnet_id": "subnet-072351d2dce524e93"
          },
          "dependencies": [
            "aws_route_table.rt1",
            "aws_subnet.subnet1",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f722066dfe3cf26",
            "route_table_id": "rtb-07d78395835a62709",
            "subnet_id": "subnet-0a2dbd8b02382008f"
          },
          "dependencies": [
            "aws_route_table.rt2",
            "aws_subnet.subnet2",
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpcaws_subnet_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aff706b4fdb31561",
            "route_table_id": "rtb-0587bd9558c66a076",
            "subnet_id": "subnet-005d77348b9f01670"
          },
          "dependencies": [
            "aws_route_table.vpcaws_subnet_route_table",
            "aws_subnet.vpcaws_subnet",
            "aws_vpc.vpc2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:security-group/sg-023c753eb066954e0",
            "description": "VPC1-IDC-CGW-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023c753eb066954e0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4500
              }
            ],
            "name": "VPC1-IDC-CGW-SG",
            "name_prefix": "",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC1-IDC-CGW-SG"
            },
            "tags_all": {
              "Name": "VPC1-IDC-CGW-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:security-group/sg-0e36ac51ebb70fb88",
            "description": "VPC1-IDC-EC2-SG",
            "egress": [],
            "id": "sg-0e36ac51ebb70fb88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC1-IDC-EC2-SG",
            "name_prefix": "",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC1-IDC-EC2-SG"
            },
            "tags_all": {
              "Name": "VPC1-IDC-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:security-group/sg-04d48fc4e75c29066",
            "description": "VPC2-AWS-EC2-SG",
            "egress": [],
            "id": "sg-04d48fc4e75c29066",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC2-AWS-EC2-SG",
            "name_prefix": "",
            "owner_id": "398561966751",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC2-AWS-EC2-SG"
            },
            "tags_all": {
              "Name": "VPC2-AWS-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02570dd4c7b80e4ec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-072351d2dce524e93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.60.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072351d2dce524e93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IDC-VPC1-Subnet1"
            },
            "tags_all": {
              "Name": "IDC-VPC1-Subnet1"
            },
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-0a2dbd8b02382008f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2dbd8b02382008f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "IDC-VPC1-Subnet2"
            },
            "tags_all": {
              "Name": "IDC-VPC1-Subnet2"
            },
            "vpc_id": "vpc-05bd9a358cc2bb78b"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpcaws_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:subnet/subnet-005d77348b9f01670",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005d77348b9f01670",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "398561966751",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AWS-VPC2-Subnet"
            },
            "tags_all": {
              "Name": "AWS-VPC2-Subnet"
            },
            "vpc_id": "vpc-02570dd4c7b80e4ec"
          },
          "dependencies": [
            "aws_vpc.vpc2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:vpc/vpc-05bd9a358cc2bb78b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-039b51fe917565d91",
            "default_route_table_id": "rtb-07c6dbd09b13d9ef7",
            "default_security_group_id": "sg-081dad629a589ce0d",
            "dhcp_options_id": "dopt-0cd97a7f9cb95852b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bd9a358cc2bb78b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07c6dbd09b13d9ef7",
            "owner_id": "398561966751",
            "tags": {
              "Name": "IDC-VPC1"
            },
            "tags_all": {
              "Name": "IDC-VPC1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:398561966751:vpc/vpc-02570dd4c7b80e4ec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0c7f23272e3f65a9e",
            "default_route_table_id": "rtb-0b1e94a6fa30eec63",
            "default_security_group_id": "sg-097ea981328d6910d",
            "dhcp_options_id": "dopt-0cd97a7f9cb95852b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02570dd4c7b80e4ec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1e94a6fa30eec63",
            "owner_id": "398561966751",
            "tags": {
              "Name": "AWS-VPC2"
            },
            "tags_all": {
              "Name": "AWS-VPC2"
            }
          }
        }
      ]
    }
  ]
}